--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 10px;
+    margin-left: 10px;
+    margin-top: 5px;
 }
 
 div {
