--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ textarea {
     margin-bottom: 20px;
 }
 
-input[type=text] {
+input[type=text], textarea {
     margin-bottom: 10px;
     margin-left: 7px;
 }
