--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: 5px;
 }
 
 
@@ -15,7 +14,7 @@ textarea {
     margin-bottom: 20px;
 }
 
-input[type=text], textarea {
+input[type=text],
+textarea {
     margin-bottom: 10px;
-    margin-left: 7px;
 }
