--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ div {
     display: grid;
 }
 
-input,
 select,
 textarea {
     width: min-content;
@@ -15,5 +14,9 @@ textarea {
 }
 
 input[type=button] {
+    margin: 10px 0px 10px 0px;
+}
+
+input[type=text] {
     margin: 10px 0px 10px 0px;
 }
