--- a/style.css
+++ b/style.css
@@ -18,5 +18,6 @@ input[type=button] {
 }
 
 input[type=text] {
-    margin: 10px 0px 10px 0px;
+    width: min-content;
+    margin: 10px 0px 0px 0px;
 }
